# LinkedAI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: on_push.yml
linkedAI/: config.py  gradio.py
linkedAI/agents/: __init__.py  agent.py  chat_agent.py  data_models.py  query_agent.py  resume_agent.py
linkedAI/scraper/: README.md  config.schema.json  config_example.json  data_models.py  scrape.py  test_scrape.ipynb  vectorize.py
tests/: conftest.py  test_agents.py  test_scraper.py
