[project]
name = "linkedai"
version = "0.1.0"
description = "AI tool for job hunting using LLMs and LinkedIn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "chromadb",
    "httpx",
    "openai",
    "onnxruntime==1.19.2", # Pinned for my macOS compatibility
    "playwright",
    "pydantic",
    "python-dotenv",
    "ipykernel",
]
